--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ejemploRest.js",
+    "start:dev": "nodemon ejemploRest.js"
   },
   "repository": {
     "type": "git",
